# Agentic-Demonstrations

./: .gitignore  pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basicchatvot.ipynb  2-graphwithmemory.ipynb  3-humanInTheLoop.ipynb
2-RagWithLangchain/: build_vector_db.py  knowledge_base.txt  query_vector_db.py  rag_pipeline.py  test_calc.py
2-RagWithLangchain/faiss_index/: index.faiss  index.pkl
3-AdvancedRAG/data/text_files/: machine_learning_intro.txt  python_intro.txt
3-AdvancedRAG/notebooks/: 1-document.ipynb  2-VectorDB.ipynb
